styling fixes: - navbar alignment safari - xs logo image view - md logo image view

--- a/styles/blocks/hero/md.css
+++ b/styles/blocks/hero/md.css
@@ -5,7 +5,7 @@
 
     #header-hero-logo {
       img {
-        width: 70%;
+        width: 65%;
         float: right;
       }
     }
